Serialize, swagger
