# app/serializers/player_serializer.rb
@@ -1,3 +1,3 @@
 class PlayerSerializer < ActiveModel::Serializer
-  attributes :id, :name, :profile_picture_url, :ranking, :preferred_cue
+  attributes :id, :name, :profile_picture_url, :ranking, :preferred_cue, :created_at, :updated_at, :wins
 end
